# dps

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: publish.yml
autostart/: dps-gui.desktop
src/: cli.rs  config.rs  error.rs  gui.rs  ipc.rs  lib.rs  main.rs  wizard.rs
src/proxmox/: client.rs  lxc.rs  mod.rs
src/sync/: ignore.rs  mod.rs  profile.rs  setup.rs  watcher.rs
systemd/: dps-daemon.service
